--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 alloy = "1.3.0"
+dotenv = "0.15.0"
 ethers = { version = "2.0.14", features = ["rustls"] }
 tokio = { version = "1.49.0", features = ["full"] }
