--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 alloy = "1.3.0"
 dotenv = "0.15.0"
 ethers = { version = "2.0.14", features = ["rustls"] }
+serde = { version = "1.0.228", features = ["derive"] }
+serde_json = "1.0.149"
 tokio = { version = "1.49.0", features = ["full"] }
